# Zeta-Engine

./: .gitignore
Zeta/: .buildpath  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  ZetaDox.Doxyfile  aclocal.m4  configure  configure.ac
Zeta/Demo/: Demo.cpp  Makefile.am  Makefile.in  SZLL  perf-record.sh  valgrind-callgrind.sh  valgrind-memcheck.sh
Zeta/Demo/Demo/: AbilityDragTable.lua  AbilityNode.lua  AbilityTree.lua  Attribution  Boot.lua  CEGUI_Settings.xml  DamageTextPool.lua  Dialog.lua  DragIcon.lua  DragIconPool.lua  DragTable.lua  Drop.lua  DroppedItem.lua  EnemyClass.lua  EventManager.lua  Factions.xml  Inventory.lua  Item.lua  ItemClass.lua  ItemDragTable.lua  ItemDrop.lua  ItemTextPool.lua  LevelRequirement.lua  ListBoxItemPool.lua  Npc.lua  Objective.lua  Operations.lua  PlayableCharacter.lua  Quest.lua  QuestClass.lua  QuestState.lua  QuestTrackPool.lua  Requirement.lua  UnitFrame.lua  UnitFramePool.lua  XPDrop.lua  init.lua
Zeta/Demo/Demo/Abilities/: AuraSphere.lua  HP5.lua  MP5.lua  Melee.lua  Strike.lua  Test.lua
Zeta/Demo/Demo/AnimationClasses/: AuraSphere.xml  Bee_Normal.xml  Captain.xml  Chicken.xml  Elder.xml  Female_NPC_1.xml  Female_NPC_2.xml  Female_NPC_3.xml  Guard.xml  Orc.xml  OrcArcher.xml  Ranger.xml  Snake.xml
Zeta/Demo/Demo/EftihiaGUI/: Eftihia.project
Zeta/Demo/Demo/GUI/: CharSelect.lua  Console.lua  GameInterface.lua  LoadingScreen.lua  MainMenu.lua  Options.lua  init.lua
Zeta/Demo/Demo/Items/: SimpleSword.lua
Zeta/Demo/Demo/LifeformClasses/: Eftihia.xml  Female_NPC_2.xml  Guard.xml
Zeta/Demo/Demo/Maps/: BriliosHouse.lua  BriliosHouse.tmx  BriliosHouseL.lua  FineForest.lua  Fine_Forest_1.tmx  TreeRule.tmx  TreeShadowsRule.tmx  rules.txt
Zeta/Demo/Demo/NPCS/: Female_NPC_2.xml  Guard.xml  Ranger.xml
Zeta/Demo/Demo/PlayableChars/: Eftihia.lua
Zeta/Demo/Demo/Quests/: ChickensOut.lua  SnakeInvasion.lua
Zeta/Demo/Demo/Sprites/: AuraSphere.anim  AuraSphere.sprites  FX1.anim  FX1.sprites  PurpleDebuff.lua  QuestMark.lua  QuestTurnIn.lua
Zeta/Demo/Demo/XMLFiles/: Settings.xml  System.xml
Zeta/Documentation/html/: AbilityClass_8hpp.html  AbilityClass_8hpp__dep__incl.map  AbilityClass_8hpp__dep__incl.md5  AbilityClass_8hpp__incl.map  AbilityClass_8hpp__incl.md5  AbilityClass_8hpp_source.html  Ability_8hpp.html  Ability_8hpp__dep__incl.map  Ability_8hpp__dep__incl.md5  Ability_8hpp__incl.map  Ability_8hpp__incl.md5  Ability_8hpp_source.html  ActiveAbilityClass_8hpp.html  ActiveAbilityClass_8hpp__dep__incl.map  ActiveAbilityClass_8hpp__dep__incl.md5  ActiveAbilityClass_8hpp__incl.map  ActiveAbilityClass_8hpp__incl.md5  ActiveAbilityClass_8hpp_source.html  ActiveAbility_8hpp.html  ActiveAbility_8hpp__incl.map  ActiveAbility_8hpp__incl.md5  ActiveAbility_8hpp_source.html  AggressiveBehaviourClass_8hpp.html  AggressiveBehaviourClass_8hpp__incl.map  AggressiveBehaviourClass_8hpp__incl.md5  AggressiveBehaviourClass_8hpp_source.html  AggressiveBehaviour_8hpp.html  AggressiveBehaviour_8hpp__incl.map  AggressiveBehaviour_8hpp__incl.md5  AggressiveBehaviour_8hpp_source.html  AllegroAudioContext_8hpp.html  AllegroAudioContext_8hpp__incl.map  AllegroAudioContext_8hpp__incl.md5  AllegroAudioContext_8hpp_source.html  AllegroBitmap_8hpp.html  AllegroBitmap_8hpp__incl.map  AllegroBitmap_8hpp__incl.md5  AllegroBitmap_8hpp_source.html  AllegroDisplay_8hpp.html  AllegroDisplay_8hpp__incl.map  (+1923 more)
Zeta/Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+133 more)
Zeta/Documentation/latex/: AbilityClass_8hpp.tex  AbilityClass_8hpp__dep__incl.md5  AbilityClass_8hpp__incl.md5  Ability_8hpp.tex  Ability_8hpp__dep__incl.md5  Ability_8hpp__incl.md5  ActiveAbilityClass_8hpp.tex  ActiveAbilityClass_8hpp__dep__incl.md5  ActiveAbilityClass_8hpp__incl.md5  ActiveAbility_8hpp.tex  ActiveAbility_8hpp__incl.md5  AggressiveBehaviourClass_8hpp.tex  AggressiveBehaviourClass_8hpp__incl.md5  AggressiveBehaviour_8hpp.tex  AggressiveBehaviour_8hpp__incl.md5  AllegroAudioContext_8hpp.tex  AllegroAudioContext_8hpp__incl.md5  AllegroBitmap_8hpp.tex  AllegroBitmap_8hpp__incl.md5  AllegroDisplay_8hpp.tex  AllegroDisplay_8hpp__incl.md5  AllegroEvent_8hpp.tex  AllegroEvent_8hpp__incl.md5  AllegroLoop_8hpp.tex  AllegroLoop_8hpp__incl.md5  AllegroRenderer_8hpp.tex  AllegroRenderer_8hpp__incl.md5  AllegroSDK_8hpp.tex  AllegroSoundInstance_8hpp.tex  AllegroSoundInstance_8hpp__incl.md5  AllegroSound_8hpp.tex  AllegroSound_8hpp__incl.md5  AnimationClass_8hpp.tex  AnimationClass_8hpp__dep__incl.md5  AnimationClass_8hpp__incl.md5  AnimationEffectsManager_8hpp.tex  AnimationEffectsManager_8hpp__incl.md5  AnimationHandler_8hpp.tex  AnimationHandler_8hpp__dep__incl.md5  AnimationHandler_8hpp__incl.md5  (+831 more)
Zeta/Documentation/man/man3/: Ability.hpp.3  AbilityClass.hpp.3  ActiveAbility.hpp.3  ActiveAbilityClass.hpp.3  AggressiveBehaviour.hpp.3  AggressiveBehaviourClass.hpp.3  AllegroAudioContext.hpp.3  AllegroBitmap.hpp.3  AllegroDisplay.hpp.3  AllegroEvent.hpp.3  AllegroLoop.hpp.3  AllegroRenderer.hpp.3  AllegroSDK.hpp.3  AllegroSound.hpp.3  AllegroSoundInstance.hpp.3  Animation.hpp.3  AnimationClass.hpp.3  AnimationHandler.hpp.3  (+321 more)
Zeta/include/: Makefile.am  Makefile.in
Zeta/libzeta/: Makefile.am  Makefile.in  zeta-sdk-allegro5.pc.in  zeta.pc.in
Zeta/libzeta/SZLL/: Ability.lua  ActiveAbility.lua  CEGUI.doclua  Class.lua  DeQueue.lua  DurableEffect.lua  Effect.lua  Item.lua  ItemClass.lua  LifeformAbility.lua  Map.lua  Npc.lua  Objective.lua  ObjectiveClass.lua  OffAnimation.lua  OverTimeEffect.lua  PassiveAbility.lua  Projectile.lua  Quest.lua  QuestClass.lua  QuestState.lua  Regeneration.lua  SaveManager.lua  Zeta.doclua  dump.lua  init.lua
(+453 files in other folders)
