# These files will end up in the install include directory
# For example, /usr/include
nobase_include_HEADERS = \
Zeta/Core/Logger.hpp \
Zeta/Core/PropertyList.hpp \
Zeta/Core/ZSmallSet.hpp \
Zeta/Core/Context.hpp \
Zeta/Core/MapLoader.hpp \
Zeta/Core/View.hpp \
Zeta/Core/LuaString.hpp \
Zeta/Core/Event.hpp \
Zeta/Core/ConsoleManager.hpp \
Zeta/Core/Color.hpp \
Zeta/Core/ZSmallMap.hpp \
Zeta/Core/LuaBoolean.hpp \
Zeta/Core/Drawable.hpp \
Zeta/Core/LuaFunctor.hpp \
Zeta/Core/Settings.hpp \
Zeta/Core/XMLSchemaValidator.hpp \
Zeta/Core/RenderingContext.hpp \
Zeta/Core/ZetaConfig.hpp \
Zeta/Core/LoopRunner.hpp \
Zeta/Core/LuaTable.hpp \
Zeta/Core/RPGClasses/AI/IdleMovementClass.hpp \
Zeta/Core/RPGClasses/AI/Faction.hpp \
Zeta/Core/RPGClasses/AI/Behaviour.hpp \
Zeta/Core/RPGClasses/AI/BehaviourClass.hpp \
Zeta/Core/RPGClasses/AI/WanderingMovement.hpp \
Zeta/Core/RPGClasses/AI/IdleMovement.hpp \
Zeta/Core/RPGClasses/AI/FactionManager.hpp \
Zeta/Core/RPGClasses/AI/AggressiveBehaviour.hpp \
Zeta/Core/RPGClasses/AI/PassiveBehaviour.hpp \
Zeta/Core/RPGClasses/AI/PassiveBehaviourClass.hpp \
Zeta/Core/RPGClasses/AI/WanderingMovementClass.hpp \
Zeta/Core/RPGClasses/AI/AggressiveBehaviourClass.hpp \
Zeta/Core/RPGClasses/Modifier.hpp \
Zeta/Core/RPGClasses/FlatModifier.hpp \
Zeta/Core/RPGClasses/MulModifier.hpp \
Zeta/Core/RPGClasses/AbilityClass.hpp \
Zeta/Core/RPGClasses/DurableEffect.hpp \
Zeta/Core/RPGClasses/Regeneration.hpp \
Zeta/Core/RPGClasses/Npc.hpp \
Zeta/Core/RPGClasses/WorldListener.hpp \
Zeta/Core/RPGClasses/CEGUIObject.hpp \
Zeta/Core/RPGClasses/RegenerationAbilityClass.hpp \
Zeta/Core/RPGClasses/ActiveAbilityClass.hpp \
Zeta/Core/RPGClasses/OverTimeEffect.hpp \
Zeta/Core/RPGClasses/SeekingProjectile.hpp \
Zeta/Core/RPGClasses/Chance.hpp \
Zeta/Core/RPGClasses/InteractObject.hpp \
Zeta/Core/RPGClasses/PassiveAbilityClass.hpp \
Zeta/Core/RPGClasses/LifeformClassContainer.hpp \
Zeta/Core/RPGClasses/CEGUIChild.hpp \
Zeta/Core/RPGClasses/Player.hpp \
Zeta/Core/RPGClasses/ProjectileClass.hpp \
Zeta/Core/RPGClasses/Attribute.hpp \
Zeta/Core/RPGClasses/LuaListener.hpp \
Zeta/Core/RPGClasses/EffectClass.hpp \
Zeta/Core/RPGClasses/Projectile.hpp \
Zeta/Core/RPGClasses/ActiveAbility.hpp \
Zeta/Core/RPGClasses/ChildObject.hpp \
Zeta/Core/RPGClasses/Enemy.hpp \
Zeta/Core/RPGClasses/PassiveAbility.hpp \
Zeta/Core/RPGClasses/Lifeform.hpp \
Zeta/Core/RPGClasses/WorldEvent.hpp \
Zeta/Core/RPGClasses/ClassifiedAbility.hpp \
Zeta/Core/RPGClasses/WorldManager.hpp \
Zeta/Core/RPGClasses/StickyObject.hpp \
Zeta/Core/RPGClasses/Object.hpp \
Zeta/Core/RPGClasses/LifeformClass.hpp \
Zeta/Core/RPGClasses/Timer.hpp \
Zeta/Core/RPGClasses/Effect.hpp \
Zeta/Core/RPGClasses/Ability.hpp \
Zeta/Core/RPGClasses/DirectionalProjectile.hpp \
Zeta/Core/MainLoop.hpp \
Zeta/Core/ConsoleFunctions.hpp \
Zeta/Core/RenderRequest.hpp \
Zeta/Core/SaveManager.hpp \
Zeta/Core/LuaNumber.hpp \
Zeta/Core/System.hpp \
Zeta/Core/ZSet.hpp \
Zeta/Core/Updateable.hpp \
Zeta/Core/SynchronousResourceContext.hpp \
Zeta/Core/LuaEngine.hpp \
Zeta/Core/NullReference.hpp \
Zeta/Core/GUIManager.hpp \
Zeta/Core/UtilityClasses/base64.h \
Zeta/Core/UtilityClasses/Rectangle.hpp \
Zeta/Core/UtilityClasses/Shape.hpp \
Zeta/Core/UtilityClasses/Vector2D.hpp \
Zeta/Core/UtilityClasses/Visitor.hpp \
Zeta/Core/UtilityClasses/Exception.hpp \
Zeta/Core/UtilityClasses/Vector2.hpp \
Zeta/Core/UtilityClasses/Ellipsis.hpp \
Zeta/Core/UtilityClasses/StringOperations.hpp \
Zeta/Core/AsynchronousRenderingContext.hpp \
Zeta/Core/FunctorContextOperation.hpp \
Zeta/Core/ShapeRenderer.hpp \
Zeta/Core/MusicManager.hpp \
Zeta/Core/SynchronousRenderingContext.hpp \
Zeta/Core/Display.hpp \
Zeta/Core/LuaReferenced.hpp \
Zeta/Core/ZMap.hpp \
Zeta/Core/AsynchronousResourceContext.hpp \
Zeta/Core/ResourceReleaseRequest.hpp \
Zeta/Core/ResourceClasses/SpriteSheet.hpp \
Zeta/Core/ResourceClasses/Sound.hpp \
Zeta/Core/ResourceClasses/SoundInstance.hpp \
Zeta/Core/ResourceClasses/Bitmap.hpp \
Zeta/Core/ResourceClasses/File.hpp \
Zeta/Core/ResourceClasses/AnimationPack.hpp \
Zeta/Core/ResourceClasses/AnimationClass.hpp \
Zeta/Core/ResourceClasses/Resource.hpp \
Zeta/Core/ResourceClasses/SharedResource.hpp \
Zeta/Core/SingleInstanced.hpp \
Zeta/Core/ContextOperation.hpp \
Zeta/Core/MapClasses/Layer.hpp \
Zeta/Core/MapClasses/StaticObject.hpp \
Zeta/Core/MapClasses/TeleportField.hpp \
Zeta/Core/MapClasses/StaticQuadtree.hpp \
Zeta/Core/MapClasses/Tile.hpp \
Zeta/Core/MapClasses/Quadtree.hpp \
Zeta/Core/MapClasses/InteractField.hpp \
Zeta/Core/MapClasses/ExternalObjectRequest.hpp \
Zeta/Core/MapClasses/Tileset.hpp \
Zeta/Core/MapClasses/Map.hpp \
Zeta/Core/toLua_Binders/Binder.hpp \
Zeta/Core/LuaPushable.hpp \
Zeta/Core/AsynchronousWorker.hpp \
Zeta/Core/AnimationClasses/AnimationHandler.hpp \
Zeta/Core/AnimationClasses/Animation.hpp \
Zeta/Core/AnimationClasses/Cell.hpp \
Zeta/Core/AnimationClasses/AnimationEffectsManager.hpp \
Zeta/Core/AnimationClasses/OffAnimation.hpp \
Zeta/Core/AnimationClasses/AnimationPlayer.hpp \
Zeta/Core/ResourceContext.hpp \
Zeta/Core/AudioContext.hpp \
Zeta/Core/NonCopyable.hpp \
Zeta/LibraryBinders/Allegro5/AllegroEvent.hpp \
Zeta/LibraryBinders/Loaders/FileLoader.hpp \
Zeta/LibraryBinders/Allegro5/AllegroLoop.hpp \
Zeta/LibraryBinders/Allegro5/AllegroBitmap.hpp \
Zeta/LibraryBinders/Allegro5/AllegroAudioContext.hpp \
Zeta/LibraryBinders/Allegro5/AllegroDisplay.hpp \
Zeta/LibraryBinders/Allegro5/AllegroSound.hpp \
Zeta/LibraryBinders/Allegro5/AllegroSoundInstance.hpp \
Zeta/LibraryBinders/Allegro5/AllegroSDK.hpp \
Zeta/LibraryBinders/Allegro5/AllegroRenderer.hpp \
Zeta/Core/ResourceCache.hpp \
Zeta/Core/GeneralLoop.hpp \
Zeta/Core/SystemEventListener.hpp \
Zeta/Core/UtilityClasses/Crosshair.hpp \
Zeta/Core/RPGClasses/LifeformState.hpp \
Zeta/Core/LuaNil.hpp \
Zeta/Core/AnimationClasses/Sprite.hpp \
Zeta/Core/MapClasses/MapTileset.hpp \
Zeta/Core/MapClasses/ReferenceRequest.hpp

